--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -21,8 +21,8 @@ for nested movements over crossing movements.<br>
 	      
 <b>Verbal reduplication and the one-delimitation principle</b><br>
 This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases to which the one-delimitation principle applies. 
-The discussion of Mandarin verbal reduplication contributes to our understanding of the one-delimitation principle by showing that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.<br>
-<b>Output:</b> Proceedings paper of LSA 97th annual meeting [paper]<br>
+The discussion of Mandarin verbal reduplication shows that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.<br>
+<b>Output:</b> Proceedings paper of LSA 97<sup>th</sup> annual meeting [paper]<br>
 <br/>
 
 
@@ -30,7 +30,7 @@ The discussion of Mandarin verbal reduplication contributes to our understanding
 This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of the limited ellipsis of the existence predicate V_{BE}, and argues the D-linked presupposition of what-N phrases in NVWQ
 could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate  V_{BE}.<br>
 
-<b>Output:</b> Proceedings paper of CLS 56th annual meeting [slides]<br>
+<b>Output:</b> Proceedings paper of CLS 56<sup>th</sup>  annual meeting [slides]<br>
 <br/>
 	</div>
     
@@ -46,7 +46,7 @@ could function similarly as an “appropriate discourse context” to license th
 with shi. I propose that Mandarin concessive hai presupposes a public-biased opinion favoring the negative alternative
 to the proposition to which hai is attached, which consequently triggers
 the presence of the verum focus marker shi.<br>
-	    <b>Output:</b> Proceedings paper of CLS 59th annual meeting [slides]<br>  
+	    <b>Output:</b> Proceedings paper of CLS 59<sup>th</sup> annual meeting [slides]<br>  
 	      <br/>
 
         <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with Dorothy Ahn] </b><br>
