--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -20,7 +20,7 @@ for nested movements over crossing movements.<br>
 
 	      
 <b>Verbal reduplication and the one-delimitation principle</b><br>
-This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases to which the one-delimitation principle applies. 
+This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases of the one-delimitation principle. 
 The discussion of Mandarin verbal reduplication shows that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.<br>
 <b>Output:</b> Proceedings paper of LSA 97<sup>th</sup> annual meeting [paper]<br>
 <br/>
