--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -28,7 +28,7 @@ The discussion of Mandarin verbal reduplication shows that (i) the one-delimitat
 
 <b>limited ellipsis and presupposition</b><br>
 This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of the limited ellipsis of the existence predicate V<sup>BE</sup>, and argues the D-linked presupposition of what-N phrases in NVWQ
-could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate V<sup>BE</sup>}.<br>
+could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate V<sup>BE</sup>.<br>
 
 <b>Output:</b> Proceedings paper of CLS 56<sup>th</sup>  annual meeting [slides]<br>
 <br/>
