--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -41,11 +41,11 @@ could function similarly as an “appropriate discourse context” to license th
     <body>
       <div class="blurb">
 	      <br/>
-	<b>The concessive readings of Mandarin scalar particle hai</b><br>
-	      Mandarin concessive hai is observed to always co-occur
-with shi. I propose that Mandarin concessive hai presupposes a public-biased opinion favoring the negative alternative
-to the proposition to which hai is attached, which consequently triggers
-the presence of the verum focus marker shi.<br>
+	<b>The concessive readings of Mandarin scalar particle <i>hai</i></b><br>
+	      Mandarin concessive <i>hai</i> is observed to always co-occur
+with <i>shi</i>. I propose that Mandarin concessive <i>hai</i> presupposes a public-biased opinion favoring the negative alternative
+to the proposition to which <i>hai</i> is attached, which consequently triggers
+the presence of the verum focus marker <i>shi</i>.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59<sup>th</sup> annual meeting [slides]<br>  
 	      <br/>
 
