--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -54,7 +54,7 @@ the presence of the verum focus marker <i>shi</i>.<br>
 	      <b>Output:</b> Poster presentation at ICTEAP-4 [poster]<br>  
 <br/>
 
-	     <b> Two Effects of the Utterance-final Particle <i>hao-bu-hao</i> in Mandarin Chinese.</b><br>
+	     <b> Two effects of the utterance-final particle <i>hao-bu-hao</i> in Mandarin Chinese.</b><br>
 The utterance-final particle <i>hao-bu-hao</i>   ‘good-not-good’ in Mandarin Chinese has two effects: requesting and emphasizing the mutually known fact. I provide an account of these two effects with the focus on their commonalities and
 dissimilarities, accounting for why one single particle can derive two different effects.<br> 
 	      <b>Output:</b> Oral presentation at NACCL-32 [please email me for slides]<br>  
