--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -15,14 +15,14 @@ It is observed in doubly-gapped Mandarin relatives that an object reading is pre
 over a subject reading. Showing both null subjects and null objects undergo movements, I argue
 that this preference for object readings over subject readings is attributed to the general preference
 for nested movements over crossing movements.<br>
-<b>Output:</b> Oral presentation at TEAL-13 [slides]<br>
+<b>Output:</b> Oral presentation at TEAL-13 <a href="https://drive.google.com/file/d/1wwMQBpxe3Vjx5CFIOb9hHOtxkX_TQx_x/view">[slides]</a><br>
 <br/>
 
 	      
 <b>Verbal reduplication and the one-delimitation principle</b><br>
 This paper argues that the incompatibility between Mandarin verbal reduplications and several post-verbal result-denoting elements is one of the cases of the one-delimitation principle. 
 The discussion of Mandarin verbal reduplication shows that (i) the one-delimitation principle not only applies to resultatives but also other result-denoting elements; (ii) vP is the domain for the one-delimitation principle.<br>
-<b>Output:</b> Proceedings paper of LSA 97<sup>th</sup> annual meeting [paper]<br>
+<b>Output:</b> Proceedings paper of LSA 97<sup>th</sup> annual meeting <a href="https://journals.linguisticsociety.org/proceedings/index.php/PLSA/article/view/5521">[paper]</a><br>
 <br/>
 
 
@@ -30,7 +30,7 @@ The discussion of Mandarin verbal reduplication shows that (i) the one-delimitat
 This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of the limited ellipsis of the existence predicate V<sub>BE</sub>, and argues the D-linked presupposition of what-N phrases in NVWQ
 could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate V<sub>BE</sub>.<br>
 
-<b>Output:</b> Proceedings paper of CLS 56<sup>th</sup>  annual meeting [slides]<br>
+<b>Output:</b> Proceedings paper of CLS 56<sup>th</sup> annual meeting [paper]<br>
 <br/>
 	</div>
     
