--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -26,7 +26,7 @@ The discussion of Mandarin verbal reduplication shows that (i) the one-delimitat
 <br/>
 
 
-<b>limited ellipsis and presupposition</b><br>
+<b>Limited ellipsis and presupposition</b><br>
 This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of the limited ellipsis of the existence predicate V<sub>BE</sub>, and argues the D-linked presupposition of what-N phrases in NVWQ
 could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate V<sub>BE</sub>.<br>
 
