--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -30,7 +30,7 @@ The discussion of Mandarin verbal reduplication shows that (i) the one-delimitat
 This study examines the non-verbal wh-question (NVWQ) in Mandarin as a case of the limited ellipsis of the existence predicate V<sub>BE</sub>, and argues the D-linked presupposition of what-N phrases in NVWQ
 could function similarly as an “appropriate discourse context” to license the ellipsis of the existence predicate V<sub>BE</sub>.<br>
 
-<b>Output:</b> Proceedings paper of CLS 56<sup>th</sup> annual meeting <a href="Research by topics/CLS-56-CHEN.pdf">[paper]</a><br>
+<b>Output:</b> Proceedings paper of CLS 56<sup>th</sup> annual meeting <a href="https://github.com/chaoyichen71/chaoyichen71.github.io/blob/master/Research%20by%20topics/CLS-56-CHEN.pdf">[paper]</a><br>
 <br/>
 	</div>
     
