--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -46,7 +46,7 @@ could function similarly as an “appropriate discourse context” to license th
 with <i>shi</i>. I propose that Mandarin concessive <i>hai</i> presupposes a public-biased opinion favoring the negative alternative
 to the proposition to which <i>hai</i> is attached, which consequently triggers
 the presence of the verum focus marker <i>shi</i>.<br>
-	    <b>Output:</b> Proceedings paper of CLS 59<sup>th</sup> annual meeting [slides]<br>  
+	    <b>Output:</b> Proceedings paper of CLS 59<sup>th</sup> annual meeting <a href="https://chaoyichen71.github.io//Research%20by%20topics/CHEN-concessive particle hai.pdf">[paper]</a><br>  
 	      <br/>
 
         <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with Dorothy Ahn] </b><br>
