--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -51,7 +51,7 @@ the presence of the verum focus marker <i>shi</i>.<br>
 
         <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with Dorothy Ahn] </b><br>
 	      We conducted forced-choice and naturalness-judgment experiments to test whether <i>ziji</i> and <i>ta-ziji</i>  differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.<br>
-	      <b>Output:</b> Poster presentation at ICTEAP-4 <a href="https://chaoyichen71.github.io//Research%20by%20topics/CHEN-concessive particle hai.pdf">[poster]</a><br>  
+	      <b>Output:</b> Poster presentation at ICTEAP-4 <a href="https://chaoyichen71.github.io//Research%20by%20topics/ICTEAP-4 poster.pdf">[poster]</a><br>  
 <br/>
 
 	     <b> Two effects of the utterance-final particle <i>hao-bu-hao</i> in Mandarin Chinese.</b><br>
