--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -49,12 +49,12 @@ the presence of the verum focus marker <i>shi</i>.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59<sup>th</sup> annual meeting <a href="https://chaoyichen71.github.io//Research%20by%20topics/CHEN-concessive particle hai.pdf">[paper]</a><br>  
 	      <br/>
 
-        <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with Dorothy Ahn] </b><br>
+        <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with <a href="https://www.dorothyahn.com/">[Dorothy Ahn]</a>] </b><br>
 	      We conducted forced-choice and naturalness-judgment experiments to test whether <i>ziji</i> and <i>ta-ziji</i>  differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.<br>
 	      <b>Output:</b> Poster presentation at ICTEAP-4 <a href="https://chaoyichen71.github.io//Research%20by%20topics/ICTEAP-4 poster.pdf">[poster]</a><br>  
 <br/>
 
-	     <b> Two effects of the utterance-final particle <i>hao-bu-hao</i> in Mandarin Chinese.</b><br>
+	     <b> Two effects of the utterance-final particle <i>hao-bu-hao</i> in Mandarin Chinese</b><br>
 The utterance-final particle <i>hao-bu-hao</i>   ‘good-not-good’ in Mandarin Chinese has two effects: requesting and emphasizing the mutually known fact. I provide an account of these two effects with the focus on their commonalities and
 dissimilarities, accounting for why one single particle can derive two different effects.<br> 
 	      <b>Output:</b> Oral presentation at NACCL-32 [please email me for slides]<br>  
