--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -49,7 +49,7 @@ the presence of the verum focus marker <i>shi</i>.<br>
 	    <b>Output:</b> Proceedings paper of CLS 59<sup>th</sup> annual meeting <a href="https://chaoyichen71.github.io//Research%20by%20topics/CHEN-concessive particle hai.pdf">[paper]</a><br>  
 	      <br/>
 
-        <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with <a href="https://www.dorothyahn.com/">[Dorothy Ahn]</a>] </b><br>
+        <b>The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i> [joint work with <a href="https://www.dorothyahn.com/">Dorothy Ahn</a>] </b><br>
 	      We conducted forced-choice and naturalness-judgment experiments to test whether <i>ziji</i> and <i>ta-ziji</i>  differ in antecedent preferences when two possible antecedents are present and differ in relative saliency.<br>
 	      <b>Output:</b> Poster presentation at ICTEAP-4 <a href="https://chaoyichen71.github.io//Research%20by%20topics/ICTEAP-4 poster.pdf">[poster]</a><br>  
 <br/>
