--- a/Research by topics/index.html
+++ b/Research by topics/index.html
@@ -6,7 +6,7 @@ title: Research by topics
 
 <div>
 	<br/> 
-<head></head> <h2>Syntax</h2>
+<head></head> <h2><u>Syntax</u></h2>
     <body>
       <div class="blurb">
 	<br/>    
@@ -37,7 +37,7 @@ could function similarly as an “appropriate discourse context” to license th
 
  <body>
 	 
-	 <head></head> <h2>Semantics</h2>
+	 <head></head> <h2><u>Semantics</u></h2>
     <body>
       <div class="blurb">
 	      <br/>
