--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@ title: Chaoyi Chen (陈超逸)
 		</br>	
 		<div class="blurb">
 			<h2>Recent activities:</h2>
-			<p>2023, August 17-19. The antecedent preferences for Mandarin reflexive <i>ziji</i> and <i>ta-ziji</i>. Poster presentation at <a href="https://sites.google.com/view/icteap4/home?authuser=0">ICTEAP-4</a>. [with <a href="https://www.dorothyahn.com/">Dorothy Ahn</a>]
-			<p>2023, May 12-14. The object-reading preference in doubly-gapped Mandarin relatives. Oral presentation at <a href="https://sites.google.com/ntnueng.tw/teal13">TEAL-13</a>. </p>
+			<p>2024, March 3-6. Null-operator-based free relatives: a case study on Mandarin free relatives. Poster presentation at <a href="https://ling.cuhk.edu.hk/glowxiv/program2.html">GLOW-in-Asia XIV</a>. 
 			<p>2023, May. I was awarded a 2023 Rutgers School of Arts and Sciences Award <a href="https://sas.rutgers.edu/news-a-events/news/newsroom/achievements/3586-2023-awards-for-distinguished-contributions-to-undergraduate-education#ChaoyiChen">for Distinguished Contributions to Undergraduate Education</a>.</p>
 </div>
 				
