--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -6,7 +6,7 @@ title: Contact me
 		<div class="blurb">
 			<h2>Email</h2>
 			</br>
-			<span class="obfuscate">chaoyi.chen@rutgers.edu/chaoyichenling@outlook.com</span>
+			<span class="obfuscate">cc1681@scarletmail.rutgers.edu/chaoyichenling@outlook.com</span>
 			</div>
 </br>
 				<h2>Address</h2>
