--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Chaoyi Chen (陈超逸)
                 </br>
 		<div class="blurb">
 			<h2>Hi! I am Chaoyi Chen!</h2><br>
-			<p>I’m a PhD candidate in <a href="https://ling.rutgers.edu/"> the Rutgers Department of Linguistics</a>. I am interested in Syntax, Semantics, and their interfaces.<br><br>
-		        My doctoral dissertation investigates the syntax and semantics of headless relatives, co-supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.<br>
+			<p>I’m an assistant professor in the Department of English at Hunan University. I am interested in Syntax, Semantics, and their interfaces.<br><br>
+		        <a href="https://www.proquest.com/docview/3127485069/abstract/D4A6FEE83B444E11PQ/1?sourcetype=Dissertations%20&%20Theses">My doctoral dissertation</a> investigates the syntax and semantics of headless relatives, co-supervised by <a href="https://sites.rutgers.edu/mark-baker/people/mark-baker/">Mark Baker</a> and <a href="https://yimeixiang.wordpress.com/">Yimei Xiang</a>.<br>
 			Other than headless relatives, I am also interested in concessive scalar particles, verbal reduplications, limited ellipsis, null categories, and reflexives.
 </div>	
 		</br>
