--- a/Education/index.html
+++ b/Education/index.html
@@ -11,13 +11,13 @@ title: Education
 <head></head>
     <body>
       <div class="blue">
-	<b>2018.08&nbsp–&nbsppresent</b><br>
+	<b>2018.08&nbsp–&nbsp2024.10</b><br>
 	<b>2016.09&nbsp–&nbsp2017.01</b><br>
 	<b>2015.09&nbsp–&nbsp2018.07</b><br>
 	<b>2011.09&nbsp–&nbsp2015.06</b><br>
 	</div>
       <div class="red">
-        Ph.D. Student in Linguistics, Rutgers University, New Brunswick, U.S.<br>
+        Ph.D in Linguistics, Rutgers University, New Brunswick, U.S.<br>
 	Visiting Student, National Tsing Hua University, Hsinchu.<br>
         M.A. in Linguistics and Applied Linguistics, Peking University, Beijing, China.<br>
         B.A. in English Language and Literature, Nankai University, Tianjin, China.<br>
