--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -6,16 +6,18 @@ title: Contact me
 		<div class="blurb">
 			<h2>Email</h2>
 			</br>
-			<span class="obfuscate">cc1681@scarletmail.rutgers.edu/chaoyichenling@outlook.com</span>
+			<span class="obfuscate">chenchaoyi@hnu.edu.cn/chaoyichenling@outlook.com</span>
 			</div>
 </br>
 				<h2>Address</h2>
 				        </br>
 					<address>
 					<strong>Chaoyi Chen<br> 
-						Department of Linguistics, Rutgers University</strong><br>
-					18 Seminary Place<br>
-					New Brunswick NJ 08901-1184<br>
+						School of Foreign Languages,Hunan University,
+						2 Lushannan Road,Yuelu District,
+						</strong><br>
+					<br>
+					Changsha,Hunan,China,410082<br>
 					
 					
 					</address>
