--- a/Contact me/index.html
+++ b/Contact me/index.html
@@ -12,12 +12,10 @@ title: Contact me
 				<h2>Address</h2>
 				        </br>
 					<address>
-					<strong>Chaoyi Chen<br> 
-						School of Foreign Languages,Hunan University,
-						2 Lushannan Road,Yuelu District,
-						</strong><br>
-					<br>
-					Changsha,Hunan,China,410082<br>
+					<strong>Chaoyi Chen </strong><br> 
+						School of Foreign Languages, Hunan University <br>
+						2 Lushannan Road,Yuelu District <br>
+					Changsha, Hunan, China, 410082<br>
 					
 					
 					</address>
